<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Feed_Back.Feed_Back_Update">
    <RelativeLayout
        android:id="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/light_grey"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="72dp"
            android:layout_height="43dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="200dp"
            android:layout_toStartOf="@+id/profile"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo2" />


        <ImageView
            android:id="@+id/profile"
            android:layout_width="70dp"
            android:layout_height="47dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/profile_description"
            android:src="@drawable/profile" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_form"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/UpdateNameFeed"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/name_client" />

        <EditText
            android:id="@+id/UpdateEmailFeed"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email_client" />

        <EditText
            android:id="@+id/UpdateMessageFeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_client"
            android:inputType="textMultiLine"
            android:lines="5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/FeedBack_add_button_layout"
            style="@style/LoginTextInputOuterFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            app:boxStrokeColor="@color/light_blue"
            app:hintTextColor="@color/light_blue"
            app:layout_constraintBottom_toTopOf="@+id/emailLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_row">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/FeedBackUpdateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_round_but_feed"
                android:text="@string/hint_update_feed"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/FeedDeleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_round_but_feed"
                android:text="@string/Hint_Delete_Feed"
                android:textColor="@color/black"
                android:textStyle="bold" />


        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>