<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"

    >


    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="204dp"
        android:baselineAligned="false"
        android:background="@drawable/border_radious"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/Admin_agents_img"
            android:layout_width="142dp"
            android:layout_height="142dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/agents_image_description"
            android:src="@drawable/agent_profile"
            android:background="@drawable/border_radious"
            android:scaleType="fitCenter" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="284dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/Admin_agents_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="7dp"
                android:paddingEnd="0dp"
                android:text="@string/agents_name"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Admin_agents_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="7dp"
                android:paddingEnd="0dp"
                android:text="@string/agents_email"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/Admin_agents_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="7dp"
                android:paddingEnd="0dp"
                android:text="@string/agents_phone"
                android:textSize="16sp" />

            <View
                android:layout_width="50dp"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Admin_viewAgent"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@drawable/round_bg"
                    android:text="@string/btnViewAgent"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="1dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Agent_Delete"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/red_round_bg"
                    android:text="@string/btnDeleteAgent"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>