<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_Agent.AdminAllAgents">


    <RelativeLayout
        android:id="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/light_grey"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="72dp"
            android:layout_height="43dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="200dp"
            android:layout_toStartOf="@+id/profile"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo2" />


        <ImageView
            android:id="@+id/profile"
            android:layout_width="70dp"
            android:layout_height="47dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/profile_description"
            android:src="@drawable/profile" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/second_row"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:backgroundTint="@color/light_grey"
        android:backgroundTintMode="src_in"
        android:clipToPadding="true"
        android:elevation="30dp"
        android:orientation="horizontal"
        android:outlineProvider="background"
        android:padding="5dp"

        app:layout_constraintTop_toBottomOf="@id/first_row"
        tools:layout_editor_absoluteX="40dp">

        <EditText
            android:id="@+id/search_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="name"
            android:background="@null"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />


        <ImageView
            android:id="@+id/search_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:contentDescription="@string/search_description"
            android:padding="10dp"
            android:src="@drawable/search" />

    </LinearLayout>

    <TextView
        android:id="@+id/all_agent"
        android:layout_width="111dp"
        android:layout_height="43dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_bg_light_yello"
        android:gravity="center"
        android:text="@string/AgentsTag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_row" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_agent"
        android:layout_width="88dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_bg"
        android:text="@string/NewAgentsTag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_row" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/AdminAgentList"
        android:layout_width="429dp"
        android:layout_height="421dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_agent"
        app:layout_constraintVertical_bias="0.298"
        tools:listitem="@layout/admin_agent_item" />


</androidx.constraintlayout.widget.ConstraintLayout>